<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"

            android:orientation="vertical">

            <TextView
                android:id="@+id/text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_add_title"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/edit_text_nazwa"
                android:layout_width="178dp"
                android:layout_height="81dp"
                android:hint="@string/app_add_name"
                android:inputType="text" />

            <EditText
                android:id="@+id/edit_text_gatunek"
                android:layout_width="177dp"
                android:layout_height="74dp"
                android:hint="@string/app_add_species"
                android:inputType="text" />

            <EditText
                android:id="@+id/edit_text_interwal"
                android:layout_width="wrap_content"
                android:layout_height="107dp"
                android:hint="@string/app_add_wInterval"
                android:inputType="number" />

            <Button
                android:id="@+id/button_dodaj"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/add"
                android:text="@string/app_add_button" />

        </LinearLayout>

    </RelativeLayout>
</ScrollView>