<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".PlantDetailsActivity">

    <TextView
        android:id="@+id/plant_name_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/plant_species_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textAlignment="center"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/plant_to_water"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_interval"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/watering_interval_textview"
            android:layout_marginLeft="1pt"
            android:layout_marginRight="1pt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_day"
            android:textSize="14sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/lastWateredTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/water_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_plant_water"
        android:drawableLeft="@drawable/water_drop"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"/>



    <Button
        android:id="@+id/button_set_reminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/notification"
        android:text="@string/app_set_reminder"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/historyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/history"
        android:text="@string/app_add_history"

        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/button_take_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:drawableLeft="@drawable/camera"
        android:text="@string/take_photo"
        android:layout_margin="16dp"/>
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        tools:srcCompat="@tools:sample/avatars"/>

</LinearLayout>